--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="page-title">Taskinator</h1>
 
         <p>Click the button below to add a new task!</p>
-        
+
         <form id="task-form">
             <div class="form-group">
                 <input type="text" name="task-name" placeholder="Enter Task Name" />
@@ -33,9 +33,20 @@
     </header>
 
     <main class="page-content">
+        <!-- Tasks To Do -->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do"></ul>
+        </section>
+        <!-- Tasks in Progress -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks In Progress</h2>
+            <ul class="task-list" id="tasks-in-progress"></ul>
+        </section>
+        <!-- Tasks Completed -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed"></ul>
         </section>
     </main>
 
